--- a/.gitignore
+++ b/.gitignore
@@ -22,3 +22,19 @@ yarn-error.log*
 .env.development.local
 .env.test.local
 .env.production.local
+
+# create-react-app/.gitignore
+.idea/
+.vscode/
+node_modules/
+build
+.DS_Store
+*.tgz
+my-app*
+template/src/__tests__/__snapshots__/
+lerna-debug.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+/.changelog
+.npm/
